# widgetTest2

./: .gitignore  Cargo.toml  index.html  package-lock.json  package.json  vite.config.js
.cargo/: config.toml
.github/: download-page.html
.github/workflows/: build.yml
confetti-butt/: package-lock.json  package.json
confetti-butt/src/: main.js  permissions.js
confetti-butt/src-tauri/: Cargo.toml  mic.plist  tauri.conf.json
confetti-butt/src-tauri/capabilities/: default.json
confetti-butt/src-tauri/icons/: icon.icns
confetti-butt/src-tauri/src/: lib.rs  main.rs
emoji/: package-lock.json  package.json  settings.html  toolbar.html  vite.config.js
emoji/public/: emojis.json
emoji/src/: main.js  settings-ui.js  settings.js  toolbar.js
emoji/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
emoji/src-tauri/capabilities/: default.json
emoji/src-tauri/src/: lib.rs  main.rs
magnifier/: index.html  package-lock.json  package.json  vite.config.js
magnifier/public/: thesaurus.json
magnifier/src/: main.js
magnifier/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
magnifier/src-tauri/capabilities/: default.json
magnifier/src-tauri/icons/: icon.icns
magnifier/src-tauri/src/: lib.rs  main.rs
manager/: index.html  package-lock.json  package.json  vite.config.js
manager/src/: main.js
manager/src-tauri/: Cargo.toml  tauri.conf.json
manager/src-tauri/capabilities/: default.json
manager/src-tauri/icons/: icon.icns
manager/src-tauri/src/: lib.rs
mushroom/: package-lock.json  package.json
mushroom/src/: main.js
mushroom/src-tauri/: Cargo.toml  tauri.conf.json
mushroom/src-tauri/capabilities/: default.json
mushroom/src-tauri/icons/: icon.icns
mushroom/src-tauri/src/: lib.rs
src/: main.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs
weather/: package-lock.json  package.json  vite.config.js
weather/src/: main.js
weather/src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
weather/src-tauri/capabilities/: default.json
weather/src-tauri/icons/: icon.icns
weather/src-tauri/src/: lib.rs
widget-core/: Cargo.toml
widget-core/src/: dock.rs  lib.rs
