# Workspace: a shared `widget-core` crate + one standalone Tauri app per widget.
[workspace]
resolver = "2"
members = [
  "widget-core",
  "mushroom/src-tauri",
  "emoji/src-tauri",
  "magnifier/src-tauri",
]

# screencapturekit (used by the mushroom widget) needs this patched dependency.
[patch.crates-io]
apple-metal = { path = "vendor/apple-metal" }
