# Workspace: a shared `widget-core` crate + one standalone Tauri app per widget.
[workspace]
resolver = "2"
members = [
  "widget-core",
  "confetti-butt/src-tauri",
  "emoji/src-tauri",
  "magnifier/src-tauri",
  "weather/src-tauri",
  "manager/src-tauri",
]

# screencapturekit (used by the confetti-butt widget) needs this patched dependency.
[patch.crates-io]
apple-metal = { path = "vendor/apple-metal" }
