[package]
name = "widget-confetti-butt"
version = "0.1.0"
description = "Confetti Butt widget"
edition = "2021"

[lib]
name = "confetti_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
widget-core = { path = "../../widget-core" }

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "8", features = ["macos_13_0"] }
rustfft = "6"
