[package]
name = "widget-emoji"
version = "0.1.0"
description = "Emoji-frames widget"
edition = "2021"

[lib]
name = "emoji_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
widget-core = { path = "../../widget-core" }
