[package]
name = "widget-manager"
version = "0.1.0"
description = "Widget manager — a dock that launches and quits the other widgets"
edition = "2021"

[lib]
name = "manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
widget-core = { path = "../../widget-core" }
