[package]
name = "widget-weather"
version = "0.1.0"
description = "Weather widget"
edition = "2021"

[lib]
name = "weather_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
widget-core = { path = "../../widget-core" }
